<resources>
    <string name="app_name">海線車站旅遊札記</string>
    <string name="miaoli">苗栗</string>
    <string name="taichung">台中</string>
    <string name="home">首頁</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="cancel">取消</string>
    <string name="submit">確定</string>

    <!--activity_welcome-->
    <string name="welcome_text1">海線車站</string>
    <string name="welcome_text2">旅遊札記</string>

    <string name="miaoli_stations">苗栗地區</string>
    <string name="taichung_stations">台中地區</string>

    <!--activity_spot-->
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <!--url-->
    <string name="timetable">http://twtraffic.tra.gov.tw/twrail/mobile/home.aspx</string>
    <string name="blogger">https://spicyboyd.blogspot.tw/</string>
    <string name="tongxiao_food_blog">https://nanai.tw/2015-08-16-540/</string>
    <string name="yuanli_food_blog1">http://m.xuite.net/blog/nakobe/wretch/147031190</string>
    <string name="yuanli_food_blog2">https://ikiwi.tw/2014-05-21-477/</string>
    <string name="dajia_food_blog">https://zineblog.com.tw/blog/post/37206026</string>
    <string name="longjing_food_blog">http://dream3s.pixnet.net/blog/category/957948</string>
    <string name="qingshui_food_blog">http://www.twgreatdaily.com/cat130/node927748</string>
    <string name="shalu_food_blog">http://dream3s.pixnet.net/blog/post/198072405-%5B%E5%8F%B0%E4%B8%AD%E6%B2%99%E9%B9%BF%5D%E6%B5%B7%E7%B7%9A%E6%B2%99%E9%B9%BF%E6%8E%A5%E8%BF%91200%E5%AE%B6%E7%BE%8E%E9%A3%9F%E5%B0%8F%E5%90%83%E9%A4%90%E5%BB%B3%E6%87%B6</string>

    <!--Firebase-->
    <string name="action_sign_in_short">註冊</string>
    <string name="email">信箱</string>
    <string name="minimum_password">密碼太短, 請輸入最少6個字元!</string>
    <string name="auth_failed"><div style="text-align:center;">登入失敗\n請檢查你的電子信箱或密碼</div></string>
    <string name="change_email">更改信箱</string>
    <string name="change_password">更改密碼</string>
    <string name="send_password_reset_email">密碼重設</string>
    <string name="remove_user">刪除帳號</string>
    <string name="new_pass">新密碼</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">登入</string>
    <string name="hint_email">信箱</string>
    <string name="hint_password">密碼</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">登入</string>
    <string name="btn_link_to_register">還不是會員?現在開始註冊!</string>
    <string name="btn_link_to_login">已經註冊，現在登入!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">忘記你的密碼?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< 返回]]></string>
    <string name="hint_new_email">新信箱</string>
    <string name="btn_change_email">更改信箱</string>
    <string name="btn_change_password">更改密碼</string>
    <string name="btn_send">送出</string>
    <string name="btn_remove">移除</string>
    <string name="btn_sign_out">登出</string>
    <string name="lbl_forgot_password">忘記密碼?</string>
    <string name="forgot_password_msg"><div style="text-align:center;">我們需要你的註冊信箱\n送出你的更改密碼訊息</div></string>
</resources>
